firefox word wrap fix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -106,6 +106,7 @@ html {
     text-align: left;
     font-family: monospace;
     word-wrap: break-word;
+    white-space: pre-wrap;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
   code {
     font-family: monospace; }
